Improve contact form

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 		<section id="contact">
 			<h3 class="section-header">Contact</h3>
-			<p>If you would like to contact me, please fill in the following form or just write an email at <a class="links" href="mailto:sandra.kinga.michalska@gmail.com">sandra.kinga.michalska@gmail.com</a>. I'll respond as quickly as possible.</p>
+			<p>If you would like to contact me, please fill in the following form. I'll respond as quickly as possible.</p>
 
 			<form method="post" novalidate>
 				<div id="error"></div>
